[gd_scene load_steps=4 format=3 uid="uid://chj3y6c861rw4"]

[ext_resource type="Texture2D" uid="uid://nat2nsqdq0rh" path="res://prototyping_tiles_from_kenney.png" id="1_4btxn"]
[ext_resource type="Script" path="res://triggers/standing_trigger/standing_trigger.gd" id="1_4prwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdrs6"]
size = Vector2(15, 15)

[node name="StandingTrigger" type="Area2D"]
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource("1_4prwi")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4btxn")
hframes = 2
region_enabled = true
region_rect = Rect2(16, 160, 32, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gdrs6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
